--- a/tasks/RSP/server/app/public/index.html
+++ b/tasks/RSP/server/app/public/index.html
@@ -34,7 +34,7 @@
                         <h5 class="card-title" id="player-name">Игрок</h5>
                         <p class="card-text">Побед: <span id="user-wins">0</span></p>
                         <p class="card-text">Процент побед: <span id="user-perc">0</span>%</p>
-                        <p class="card-text">Счет: <span id="user-score">0</span></p>
+                        <p class="card-text">Баллов: <span id="user-score">0</span></p>
                         <button type="button" id="rock" class="btn-game btn btn-info">Камень</button>
                         <button type="button" id="scissors" class="btn-game btn btn-info">Ножницы</button>
                         <button type="button" id="paper" class="btn-game btn btn-info">Бумага</button>
@@ -49,7 +49,7 @@
                         <h5 class="card-title">bot</h5>
                         <p class="card-text">Побед: <span id="bot-wins">0</span></p>
                         <p class="card-text">Процент побед: <span id="bot-perc">0</span>%</p>
-                        <p class="card-text"> Счет: <span id="bot-score">0</span></p>
+                        <p class="card-text"> Баллов: <span id="bot-score">0</span></p>
                         <h4
                             style="text-transform: uppercase; text-align: center; font-size: 18px; font-family: 'Roboto Mono'; display: block; margin-top: 20px; padding: 12px; background-color: #ddd; border: solid 1px #aaa; border-radius: 5px;">
                             ИСКУССТВЕННЫЙ ИНТЕЛЛЕКТ</h4>
@@ -69,8 +69,7 @@
         </div>
     </div>
 </body>
-    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="javascripts/script.js"></script>
